# HolyWatermarkRemover

./: .gitignore  CMakeLists.txt  README.md  app.qrc  hwrconfigmanager.cpp  hwrconfigmanager.h  hwrprojectmanager.cpp  hwrprojectmanager.h  main.cpp  mk_i18n.bat  qimagelistmodel.cpp  qimagelistmodel.h  videoeditor.cpp  videoeditor.h  watermark.cc
res/: HolyWatermarkRemover_zh_CN.ts
res/qml/: AreaModel.qml  AreaSelectPage.qml  ContactPage.qml  DragRectangle.qml  DynamicIconButton.qml  EditImageBar.qml  EditImagePage.qml  EditVideoPage.qml  EditorMain.qml  EditorView.qml  EditorViewV2.qml  FlatButton.qml  FlatIconButton.qml  HistoryPage.qml  HistoryView.qml  IconButton.qml  ImExportPage.qml  MainView.qml  MultiPlayerScene.qml  MySpinBox.qml  ProcessFragment.qml  ProgressArea.qml  RectangleArea.qml  ResizeRectangle.qml  SpinAreaBar.qml  Theme.qml  TransparentWelcomePage.qml  VideoOutput.qml  WatermarkScene.qml  WatermarkToolBar.qml  WelcomePage.qml
